--- a/css/navbar.css
+++ b/css/navbar.css
@@ -118,3 +118,70 @@ header nav ul li a.active {
     transition: 0.5s;
     background-color: #ff4532;
 }
+
+#showVisitButton {
+    transition: 0.5s;
+    display: block;
+    position: fixed; 
+    bottom: 80px; 
+    right: 30px; 
+    z-index: 100; 
+    border: none; 
+    outline: none;  
+    color: white;
+    cursor: pointer; 
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#showVisitButton:hover {
+    transition: 0.5s;
+    background-color: #ff4532;
+}
+
+ /* The visitBar - position it at the bottom and in the middle of the screen */
+ #visitBar {
+    visibility: hidden; /* Hidden by default. Visible on click */
+    min-width: 250px; /* Set a default minimum width */
+    margin-left: -125px; /* Divide value of min-width by 2 */
+    background-color: #333; /* Black background color */
+    color: #fff; /* White text color */
+    text-align: center; /* Centered text */
+    border-radius: 2px; /* Rounded borders */
+    padding: 16px; /* Padding */
+    position: fixed; /* Sit on top of the screen */
+    z-index: 1; /* Add a z-index if needed */
+    left: 50%; /* Center the visitBar */
+    bottom: 30px; /* 30px from the bottom */
+  }
+  
+  /* Show the visitBar when clicking on a button (class added with JavaScript) */
+  #visitBar.show {
+    visibility: visible; /* Show the visitBar */
+    /* Add animation: Take 0.5 seconds to fade in and out the visitBar.
+    However, delay the fade out process for 2.5 seconds */
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  }
+  
+  /* Animations to fade the visitBar in and out */
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  } 
