--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Patua+One&display=swap');
 
 header {
     z-index: 10;
