--- a/css/gallery.css
+++ b/css/gallery.css
@@ -48,7 +48,7 @@
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.dot-active, .dot:hover {
   background-color: #ff4532;
 }
 
