--- a/css/review.css
+++ b/css/review.css
@@ -114,17 +114,20 @@ table, th, td {
   border: 1px solid black;
   padding: 15px;
   text-align: left;
+  font-family: 'Muli', cursive;
+  letter-spacing: 0.1em;
+  font-size: 1.1em;
 }
   
 th {
   height: 50px;
 }
 
-tr:nth-child(even) {background-color: red;}
-tr:nth-child(odd) {background-color: blue;}
+tr:nth-child(even) {background-color: rgb(200, 200, 200);}
+tr:nth-child(odd) {background-color: white;}
 
 th {
-  background-color: #4CAF50;
+  background-color: #cc1602;
   color: white;
 }
 
