--- a/css/review.css
+++ b/css/review.css
@@ -113,7 +113,7 @@ table {
 table, th, td {
   border: 1px solid black;
   padding: 15px;
-  text-align: left;
+  text-align: center;
   font-family: 'Muli', cursive;
   letter-spacing: 0.1em;
   font-size: 1.1em;
@@ -127,11 +127,33 @@ tr:nth-child(even) {background-color: rgb(200, 200, 200);}
 tr:nth-child(odd) {background-color: white;}
 
 th {
-  background-color: #cc1602;
-  color: white;
+    color: white;
+}
+
+#thead-first {
+    background-color: #cc1602;
+}
+
+#thead-second {
+    background-color: #ff4532;
 }
 
 .table-overlay {
     display: flex;
     justify-content: center;
+}
+
+@media (max-width: 555px) {
+        table, th, td {
+    border: 0.7px solid black;
+    padding: 7.5px;
+    text-align: center;
+    font-family: 'Muli', cursive;
+    letter-spacing: 0.1em;
+    font-size: 0.7em;
+    }
+
+    th {
+        height: 10px;
+    }
 }
